--- a/css/styles.css
+++ b/css/styles.css
@@ -5,4 +5,20 @@ h1 {
     text-decoration: blue double underline overline;
     text-align: center;
     background-color: #BEFFFF;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+}
+p {
+    text-align: center;
+}
+h2 {
+    text-align: center;
+}
+ul {
+    text-align: center;
+    list-style-type: none;
+    /* overflow: hidden; */
+}
+h3 {
+    text-align: center;
 }
