add side navigation bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,42 @@
 body {
-    background-color: #DCFFFF;
+    background-image: url("https://w.wallhaven.cc/full/45/wallhaven-4582l8.jpg");  
+}
+.side-nav {
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+
+}
+.side-nav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    font-family: 'Lato', sans-serif;
+}
+.side-nav a:hover {
+    color: #f1f1f1;
+}
+.main {
+    margin-left: 160px;
+    padding: 0px 10px;
+}
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+
+/* body {
+    background-image: url("https://w.wallhaven.cc/full/43/wallhaven-43jlyd.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 h1 {
     text-decoration: black double underline overline;
@@ -17,6 +54,7 @@ h2 {
     color: blue;
 }
 ul {
+
     text-align: center;
     list-style-type: none;
     /* overflow: hidden; */
@@ -30,4 +68,4 @@ h3:hover {
 }
 ul li a:hover {
     color: red;
-}
+} */
