add red dotted borderlines to side bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
+    opacity: 0.98;
 }
 .side-nav {
     height: 100%;
@@ -27,9 +28,20 @@ body {
 .side-nav a:hover {
     color: #f1f1f1;
 }
-
-#tC {
-    margin-top: 250px;
+h2 {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 30px;
+    font-weight: 500;
+    color: #818181;
+    display: block;
+    font-family: 'Lato', sans-serif;
+}
+hr {
+    border-top: 1px dotted red;
+    border-radius: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .home-page {
     margin-left: 160px;
@@ -48,9 +60,14 @@ body {
     .sidenav a {font-size: 18px;}
 }
 /* h1 {
-    font-family: 'Bungee Shade', cursive;
-    color: white;
+    font-family: san;
     margin-top: 50%;
+    font-size: 160px;
+    letter-spacing: 20px;
+    background: url('https://w.wallhaven.cc/full/gj/wallhaven-gj75re.jpg');
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text; 
+
 } */
 .active {
     color: #f1f1f1;
