--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,3 @@
-body {
-    background-image: url("https://w.wallhaven.cc/full/45/wallhaven-4582l8.jpg");  
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    opacity: 0.98;
-}
 .side-nav {
     height: 100%;
     width: 200px;
@@ -37,38 +30,29 @@ h2 {
     display: block;
     font-family: 'Lato', sans-serif;
 }
-hr {
-    border-top: 1px dotted red;
-    border-radius: 5px;
-    margin-left: 10px;
-    margin-right: 10px;
+h2:hover {
+    color: white;
 }
-.home-page {
-    margin-left: 160px;
-    padding: 0px 10px;
-    margin-top: 50px;
-    text-align: center;
+hr {
+    border-top: 2px solid red;
+    border-radius: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.btn {
+    background-color: red;
+    color: white;
+    margin: 30px 65px;
+    display: block;
+
 }
 .main {
+    background-image: url("img1.jpg");
     margin-left: 160px;
     padding: 0px 10px;
     margin-top: 50px;
-    display: none;
 }
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
-}
-/* h1 {
-    font-family: san;
-    margin-top: 50%;
-    font-size: 160px;
-    letter-spacing: 20px;
-    background: url('https://w.wallhaven.cc/full/gj/wallhaven-gj75re.jpg');
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text; 
-
-} */
-.active {
-    color: #f1f1f1;
 }
