--- a/css/styles.css
+++ b/css/styles.css
@@ -10,20 +10,6 @@ body, html {
 * {
     box-sizing: border-box;
 }
-
-.bg-text {
-    font-weight: bold;
-    font-size: 80px;
-    position: fixed; 
-    top: 50%;
-    left: 55%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 300px;
-    padding: 20px;
-    text-align: center;
-    opacity: 0.3;
-  }
 .side-nav {
     height: 100%;
     width: 200px;
@@ -56,9 +42,6 @@ h2 {
     display: block;
     font-family: 'Lato', sans-serif;
 }
-h2:hover {
-    
-}
 hr {
     border-top: 2px solid red;
     border-radius: 5px;
@@ -70,6 +53,7 @@ hr {
     color: white;
     margin: 30px 65px;
     display: block;
+    margin-top: 80%;
 
 }
 .main {
@@ -80,4 +64,18 @@ hr {
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+}
+h3 {   
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 50px;
+    color: red;
+    text-align: center;
+    text-shadow: 1px 1px 2px;
+}
+p {
+    text-align: center;
+    padding: 6px 8px 6px 16px;
+    font-size: 25px;
+
 }
