add testimonials sections and content

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-/* body {
-
-    background-image: url("https://w.wallhaven.cc/full/45/wallhaven-4582l8.jpg"), url("https://w.wallhaven.cc/full/95/wallhaven-95e3rk.jpg"), url("https://w.wallhaven.cc/full/42/wallhaven-423gy9.jpg");
-} */
 body, html {
     height: 100%;
     margin: 0;
@@ -33,6 +29,10 @@ body, html {
 .side-nav a:hover {
     color: #f1f1f1;
 }
+h1 {
+    text-align: center;
+    font-size: 50px;
+}
 h2 {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
@@ -54,7 +54,10 @@ hr {
     margin: 30px 65px;
     display: block;
     margin-top: 80%;
-
+}
+.btn:hover {
+    background-color: #ff746b;
+    color: black;
 }
 .main {
     margin-left: 160px;
@@ -126,13 +129,45 @@ p {
     outline: none;
     transition: 0.4s;
 }
-.active, .accordion:hover {
+.accordion:hover {
     background-color: #ffb7b2;
     color: black;
 }
 .panel {
     padding: 0 18px;
     background-color: white;
-    /* display: none; */
     overflow: hidden;
 }
+.container3 {
+    border: 2px solid #ccc;
+    background-color: #eee;
+    border-radius: 5px;
+    padding: 16px;
+    margin: 16px 0;
+}  
+.container3::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+.container3 img {
+    float: left;
+    margin-right: 300px;
+    border-radius: 50%;
+}
+  
+.container3 span {
+    font-size: 20px;
+    margin-right: 15px;
+}
+  
+@media (max-width: 500px) {
+    .container3 {
+        text-align: center;
+    }
+    .container3 img {
+        margin: auto;
+        float: none;
+        display: block;
+    }
+  }
